# AI

./: .gitignore  README.md
courses/usi/artificial-intelligence/: Lecture_1_Random_Solver.ipynb  Lecture_1_Random_Solver_solution.ipynb  Lecture_2_Constructive_Heuristics.ipynb  Lecture_2_Constructive_Heuristics_solution.ipynb  Lecture_3_Local_Search.ipynb  Lecture_3_Local_Search_solution.ipynb  Lecture_4_SA_ILS.ipynb  Lecture_4_SA_ILS_solution.ipynb  README.md  constructive.py  utils.py
courses/usi/machine-learning/assignments/1/: README.md  example.ipynb  pyproject.toml
courses/usi/machine-learning/assignments/1/Report Template/: template.aux  template.fdb_latexmk  template.fls  template.tex
courses/usi/machine-learning/assignments/1/model/: bonus.pt  model_lasso.pickle
courses/usi/machine-learning/assignments/1/report/: template.tex
courses/usi/machine-learning/assignments/2/: README.md  example.ipynb  pyproject.toml  scratch.py
courses/usi/machine-learning/assignments/2/latex/: report_surname_name.tex
courses/usi/machine-learning/assignments/Assignment 1/: pyproject.toml
courses/usi/machine-learning/jeferson_moralesmariciano/: example.ipynb
courses/usi/machine-learning/jeferson_moralesmariciano/model/: model_linear.pickle
courses/usi/machine-learning/labs/: 03_model_performance.ipynb  04_deep_learning.ipynb
